---------------------------------------------------------------------------------------------------
Version: 0.3.9
Date: 2025-04-04
  Features:
    - New biological / agricultural tech tree
    - Added herbarium
  Changes:
    - Updated woodfarming icon
    - Renamed krastorio bio lab to genetics facility
    - Renamed gyro to gyroscope
  Bugfixes:
    - enriching crushed iron ore now correctly produces enriched iron
---------------------------------------------------------------------------------------------------
Version: 0.3.8b
Date: 2025-03-22
  Bugfixes:
    - Fixed compatibility with factorio 2.0.42
---------------------------------------------------------------------------------------------------
Version: 0.3.8
Date: 2025-03-21
  Features:
    - Added more items
  Changes:
    - Updated recipe chain for recycler
    - Updated recipe chain for nuclear reactor
    - Updated locale
    - Updated graphics of buildings
    - Changed tier 1 military items recipes
    - Updated tier 2 military tech tree
  Bugfixes:
    - Fixed cyclic dependancy in tech tree for craftgin diamond saw
---------------------------------------------------------------------------------------------------
Version: 0.3.7
Date: 2025-03-14
  Features:
    - Added more items like mosfet, VRM, and doped silicon
  Changes:
    - Updated names for some alloys
    - Updated icons for enriching ores
    - Updated tech tree
---------------------------------------------------------------------------------------------------
Version: 0.3.6
Date: 2025-03-09
  Features:
    - Added crystallizer
  Changes:
    - Updated tech tree
    - Ferrite among other metals unlocked in mid to late game can now not be smelted in stone or steel furnace
  Bugfixes:
    - electric furnace does not require electro magnets
---------------------------------------------------------------------------------------------------
Version: 0.3.5
Date: 2025-03-08
  Features:
    - Added germanium recipe chain