@@ -3900,6 +3900,42 @@ data:extend({
   },
   {
     type = "technology",
+    name = "sp-agricultural-processes",  -- #ForRegEx# - technology
+    icons = util.icon.combine_two_icons("__Spaghetorio__/graphics/hr-icons/potato-1.png", 256, {20, -20},
+                                        "__Spaghetorio__/graphics/hr-icons/wheat-1.png", 256, {-20, 20}),
+    icon_size = 256,
+    icon_mipmaps = 4,
+    effects = {
+      {
+        type = "unlock-recipe",
+        recipe = "sp-potato",
+      },
+      {
+        type = "unlock-recipe",
+        recipe = "sp-wheat",
+      },
+    },
+    prerequisites = {
+      "sp-urea",
+      "sp-herbarium"
+    },
+    unit = {
+      count = 100,
+      ingredients = {
+        {"sp-automation-science-pack-2", 1},
+        {"logistic-science-pack", 1},
+        {"chemical-science-pack", 1},
+        {"sp-material-science-pack-1", 1},
+        {"sp-geological-science-pack-1", 1},
+        {"sp-electronic-science-pack-1", 1},
+        {"metallurgic-science-pack", 1},
+        {"electromagnetic-science-pack", 1}
+      },
+      time = 30,
+    },
+  },
+  {
+    type = "technology",
     name = "sp-silicon-processing",  -- #ForRegEx# - technology
     icon = "__Spaghetorio__/graphics/krastorio/technologies/silicon-processing.png",
     icon_size = 256,
@@ -7795,6 +7831,18 @@ data:extend({
     effects = {
       {
         type = "unlock-recipe",
+        recipe = "sp-herbarium",
+      },
+      {
+        type = "unlock-recipe",
+        recipe = "sp-ventilator",
+      },
+      {
+        type = "unlock-recipe",
+        recipe = "sp-sprinkler",
+      },
+      {
+        type = "unlock-recipe",
         recipe = "sp-vanadyl-sulfate",
       },
       {
@@ -7803,7 +7851,8 @@ data:extend({
       }
     },
     prerequisites = {
-      "sp-potassium-processing"
+      "sp-potassium-processing",
+      "sp-kr-greenhouse"
     },
     unit = {
       count = 100,
